--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,7 +27,7 @@ body{
     transition: 0.3s;
     z-index: 999;
 
-    &_container{
+    &__container{
         max-width: 1300px;
         margin: auto;
         padding: 0 40px;
@@ -35,58 +35,58 @@ body{
         align-items: center;
         justify-content: space-between;
 
+        &__logo{
+            height: 40px;
+            width: 39px;
+            background-image: url(/src/assets/img/iExclamation.png);
+            background-size: cover;
+            margin-left: -80px;
+        }
+
+        &__menu-toggler{
+            background: none;
+            width: 30px;
+            border: none;
+            cursor: pointer;
+            position: relative;
+            outline: none;
+            z-index: 999;
+        
+            span{
+                display: block;
+                position: relative;
+                background-color: black;
+                height: 3px;
+                margin: 6px 0;
+                transition: 0.5s;
+                display: none;
+            }
+
+        }
+
+        &__menu{
+            a:hover{
+                color: blue;
+                }
+            a{
+                color:$icon-color;//#056d38;
+                font-size: 20px;
+                font-weight: 700;
+                text-decoration: none;
+                margin-left: 30px;
+                transition: 0.5s;
+                }
+        }
+
     
 }
-.logo{
-   
-    height: 32px;
-    width: 39px;
-    background-image: url(../assets/img/game.png);
-    background-size: cover;
-    margin-left: -80px;
-}
+
 
 }
 
-.menu-toggler{
-    background: none;
-    width: 30px;
-    border: none;
-    cursor: pointer;
-    position: relative;
-    outline: none;
-    z-index: 999;
-
-    span{
-        display: block;
-        position: relative;
-        background-color: black;
-        height: 3px;
-        margin: 6px 0;
-        transition: 0.5s;
-        display: none;
-    }
-}
-
-.navbar-menu{
-    a:hover{
-        color: blue;
-    }
-    a{
-        color:$icon-color;//#056d38;
-        font-size: 20px;
-        font-weight: 700;
-        text-decoration: none;
-        margin-left: 30px;
-        transition: 0.5s;
-        
-
-
-    }
-}
 
 #home{
-    .home_container--left{
+    .home__container--left{
         -webkit-transform: translateY(-50%);
         -ms-transform: translateY(-50%);
         transform: translateY(-50%);
@@ -95,86 +95,98 @@ body{
         top: 300px;
         //border: solid 10px #262262;
         width: 300px;
+
+        &__content{
+            width: 100%;
+            font-family: $font-stack;
+            color:#36a9e1;
+            width: 550px;
+            padding: 10px;
+            margin:0px;
+           
+            
+            h1{
+                margin-bottom: 600px;
+                .hello:hover{
+                    transform: rotate(3.5deg);
+                    transition:1.5s;
+                }
+                .hello{
+                    background-color: white;
+                    font-size: 80px;
+                    border: 3.5px solid black;
+                    box-shadow: 3px 4px black;
+                    right: 250px;
+                    position: absolute;
+                    line-height: 1.3;
+                    padding-left: 30px;
+                    padding-right: 30px;
+                    top: 200px;
+                    transform: rotate(-3.5deg) translateX(30%);
+                    width: auto;
+                    white-space: nowrap;
+                }
+                .name:hover{
+                    transform: rotate(-1.5deg);
+                    transition:1.5s;
+                }
+                .name{
+                    background-color:white;//#D8BFD8
+                    font-size: 80px;
+                    border: 3.5px solid black;
+                    box-shadow: 3px 4px black;
+                    position: absolute;
+                    right: 150px;
+                    line-height: 1.3;
+                    padding-left: 30px;
+                    padding-right: 30px;
+                    top: 390px;
+                    transform: rotate(1.5deg) translateX(30%);
+                    width: auto;
+                    white-space: nowrap;
+    
+                    .text--red{
+                        color: $secondary-color;
+                    }
+                }
+                .job:hover{
+                    transform: rotate(2.5deg) translateX(30%);
+                    transition:1.5s;
+                }
+                .job{
+                    background-color:white;
+                    font-size: 80px;
+                    border: 3.5px solid black;
+                    box-shadow: 3px 4px black;
+                    position: absolute;
+                    right: 150px;
+                    line-height: 1.3;
+                    padding-left: 30px;
+                    padding-right: 30px;
+                    top: 590px;
+                    transform: rotate(-2.5deg) translateX(30%);
+                    width: auto;
+                    white-space: nowrap;
+                }
+    
+            }
         
     }
-    .content{
-        width: 100%;
-        font-family: $font-stack;
-        color:#36a9e1;
-        width: 550px;
-        padding: 10px;
-        margin:0px;
-       
+}
 
-        h1{
-            margin-bottom: 600px;
-            .hello{
-                background-color: white;
-                font-size: 80px;
-                border: 3.5px solid black;
-                box-shadow: 3px 4px black;
-                right: 250px;
-                position: absolute;
-                line-height: 1.3;
-                padding-left: 30px;
-                padding-right: 30px;
-                top: 200px;
-                transform: rotate(-3.5deg) translateX(30%);
-                width: auto;
-                white-space: nowrap;
-            }
-            .name{
-                background-color:white;//#D8BFD8
-                font-size: 80px;
-                border: 3.5px solid black;
-                box-shadow: 3px 4px black;
-                position: absolute;
-                right: 150px;
-                line-height: 1.3;
-                padding-left: 30px;
-                padding-right: 30px;
-                top: 390px;
-                transform: rotate(1.5deg) translateX(30%);
-                width: auto;
-                white-space: nowrap;
-
-                .text--red{
-                    color: $secondary-color;
-                }
-            }
-
-            .job{
-                background-color:white;
-                font-size: 80px;
-                border: 3.5px solid black;
-                box-shadow: 3px 4px black;
-                position: absolute;
-                right: 150px;
-                line-height: 1.3;
-                padding-left: 30px;
-                padding-right: 30px;
-                top: 590px;
-                transform: rotate(-2.5deg) translateX(30%);
-                width: auto;
-                white-space: nowrap;
-            }
-
-        }
-    }
-
-    .home_container--right{
+    .home__container--right{
         position: relative;
         left: 850px;
         top: 170px;
         //border: solid 10px #262262;
         width: 300px;
 
-        .frame{
+        &__frame{
             display: flex;
             align-items: center;
             box-align: center;
             padding: 2px;
-            width: 550px;
+            width: 480px;
             left: -10px;
             top: 0px;
             position: absolute;
@@ -183,19 +195,20 @@ body{
             .icon::after{
                 position: absolute;
                 top: 2px;
-                left: 10px;
+                left: 5px;
                 content: " ";
                 width: 20px;
-                height: 15px;
+                height: 19px;
                 background: url(/src/assets/img/message.png) no-repeat 50%;
                 background-size: 25px;
             }
             .spacer{
                 background: none;
-                width: 400px;
+                width: 355px;
                 border: none;
+                left: 25px;
                 padding-right: -20px;
-                position: relative;
+                position: absolute;
                 outline: none;
                 z-index: 999;
                 i{
@@ -208,32 +221,43 @@ body{
                     transition: 0.5s; 
                 }
             }
-            span{
-                margin-left:22px;
-                margin-right:5px;
-                margin-top: -2px;
+            h2{
+                //margin: 0;
+                margin-left: 380px;
                 font-size: 12px;
+                font-weight: 500;
+                font-family: monospace;
                 color: black;
                 
             }
     
 
         }
-        .profile{
+        &__profile{
             position: absolute;
             display: flex;
             align-items: center;
             box-align: center;
-            padding: 200px;
-            width: 550px;
+            padding: 150px;
+            width: 480px;
             left: -10px;
-            top: 20px;
-            background-image: url(/src/assets/img/profile.JPG);
-            background-size: cover;
-            height: 500px;
-            border: 1px solid black;
+            top: 22px;
+            height: 450px;
+            border: 3px solid black;
+            background-color: $primary-color;
+            //background: url(/src/assets/img/profile.jpg) no-repeat;
+            // border-radius: 3px;
+            // box-shadow: 3px 4px ;
+            // ransform: rotate(1.5deg) translateX(30%);
+            // width: auto;
+            // white-space: nowrap;
+            img{
+                left: 0px;
+                top: -130px;
+                position: absolute;
+            }
         }
-        .social-logo{
+        &__social-logo{
             position: absolute;
             display: flex;
             align-items: center;
@@ -254,6 +278,7 @@ body{
             }
 
         }
+        
 
     }
 }
