--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -65,7 +65,10 @@ body {
   margin: 6px 0;
   -webkit-transition: 0.5s;
   transition: 0.5s;
-  display: none;
+}
+
+.navbar__container__menu {
+  margin-left: 600px;
 }
 
 .navbar__container__menu a:hover {
@@ -82,13 +85,24 @@ body {
   transition: 0.5s;
 }
 
+#home .home__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 #home .home__container--left {
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-  position: absolute;
-  left: 400px;
-  top: 300px;
-  width: 300px;
+  position: relative;
+  height: 500px;
+  width: 750px;
 }
 
 #home .home__container--left__content {
@@ -96,12 +110,6 @@ body {
   font-family: "Oswald", sans-serif;
   color: #36a9e1;
   width: 550px;
-  padding: 10px;
-  margin: 0px;
-}
-
-#home .home__container--left__content h1 {
-  margin-bottom: 600px;
 }
 
 #home .home__container--left__content h1 .hello:hover {
@@ -112,17 +120,17 @@ body {
 }
 
 #home .home__container--left__content h1 .hello {
+  position: absolute;
   background-color: white;
-  font-size: 80px;
+  font-size: 60px;
   border: 3.5px solid black;
   -webkit-box-shadow: 3px 4px black;
           box-shadow: 3px 4px black;
-  right: 250px;
-  position: absolute;
+  right: 350px;
   line-height: 1.3;
   padding-left: 30px;
   padding-right: 30px;
-  top: 200px;
+  top: 150px;
   -webkit-transform: rotate(-3.5deg) translateX(30%);
           transform: rotate(-3.5deg) translateX(30%);
   width: auto;
@@ -130,24 +138,24 @@ body {
 }
 
 #home .home__container--left__content h1 .name:hover {
-  -webkit-transform: rotate(-1.5deg);
-          transform: rotate(-1.5deg);
+  -webkit-transform: rotate(-3.5deg) translateX(50%);
+          transform: rotate(-3.5deg) translateX(50%);
   -webkit-transition: 1.5s;
   transition: 1.5s;
 }
 
 #home .home__container--left__content h1 .name {
+  position: absolute;
   background-color: white;
-  font-size: 80px;
+  font-size: 60px;
   border: 3.5px solid black;
   -webkit-box-shadow: 3px 4px black;
           box-shadow: 3px 4px black;
-  position: absolute;
-  right: 150px;
+  right: 240px;
   line-height: 1.3;
   padding-left: 30px;
   padding-right: 30px;
-  top: 390px;
+  top: 300px;
   -webkit-transform: rotate(1.5deg) translateX(30%);
           transform: rotate(1.5deg) translateX(30%);
   width: auto;
@@ -166,17 +174,17 @@ body {
 }
 
 #home .home__container--left__content h1 .job {
+  position: absolute;
   background-color: white;
-  font-size: 80px;
+  font-size: 60px;
   border: 3.5px solid black;
   -webkit-box-shadow: 3px 4px black;
           box-shadow: 3px 4px black;
-  position: absolute;
-  right: 150px;
+  right: 230px;
   line-height: 1.3;
   padding-left: 30px;
   padding-right: 30px;
-  top: 590px;
+  top: 480px;
   -webkit-transform: rotate(-2.5deg) translateX(30%);
           transform: rotate(-2.5deg) translateX(30%);
   width: auto;
@@ -184,33 +192,23 @@ body {
 }
 
 #home .home__container--right {
-  position: relative;
-  left: 850px;
-  top: 170px;
-  width: 300px;
+  left: -250px;
+  margin-top: 90px;
+  width: 550px;
 }
 
 #home .home__container--right__frame {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  box-align: center;
-  padding: 2px;
-  width: 480px;
-  left: -10px;
-  top: 0px;
   position: absolute;
+  width: 490px;
+  margin-top: 70px;
   background: rgba(174, 168, 168, 0.729);
   border: 1px solid black;
 }
 
 #home .home__container--right__frame .icon::after {
   position: absolute;
-  top: 2px;
-  left: 5px;
+  top: 1px;
+  left: -1px;
   content: " ";
   width: 20px;
   height: 19px;
@@ -219,14 +217,14 @@ body {
 }
 
 #home .home__container--right__frame .spacer {
-  background: none;
-  width: 355px;
-  border: none;
-  left: 25px;
-  padding-right: -20px;
   position: absolute;
+  background: none;
+  width: 365px;
+  border: none;
+  left: 20px;
+  top: 3px;
+  padding-right: -20px;
   outline: none;
-  z-index: 999;
 }
 
 #home .home__container--right__frame .spacer i {
@@ -242,7 +240,7 @@ body {
 }
 
 #home .home__container--right__frame h2 {
-  margin-left: 380px;
+  margin-left: 390px;
   font-size: 12px;
   font-weight: 500;
   font-family: monospace;
@@ -250,54 +248,163 @@ body {
 }
 
 #home .home__container--right__profile {
-  position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  box-align: center;
-  padding: 150px;
-  width: 480px;
-  left: -10px;
-  top: 22px;
+  position: relative;
+  width: 490px;
   height: 450px;
-  border: 3px solid black;
+  left: 0px;
+  top: 90px;
+  border: 2px solid black;
   background-color: #36a9e1;
 }
 
+#home .home__container--right__profile img:hover {
+  -webkit-transform: translateY(10px);
+          transform: translateY(10px);
+  -webkit-transition: 1.5s;
+  transition: 1.5s;
+}
+
 #home .home__container--right__profile img {
-  left: 0px;
-  top: -130px;
   position: absolute;
+  left: 0px;
+  top: -132px;
+  border-radius: 65px;
+  width: auto;
 }
 
 #home .home__container--right__social-logo {
-  position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  padding: 10px;
-  width: 550px;
-  top: 550px;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  position: absolute;
+  margin-top: 40px;
+  margin-left: 320px;
 }
 
 #home .home__container--right__social-logo a:hover {
-  color: blue;
+  color: black;
+  -webkit-transition: 1s;
+  transition: 1s;
 }
 
 #home .home__container--right__social-logo a {
   text-decoration: none;
-  color: #BA55D3;
+  color: white;
   font-size: 40px;
-  margin-top: -20px;
   -webkit-transition: 0.2s;
   transition: 0.2s;
+  margin-left: 15px;
+}
+
+#home .home__container--right__buttons {
+  position: absolute;
+  margin-top: -300px;
+  margin-left: 260px;
+  width: 210px;
+}
+
+#home .home__container--right__buttons a:hover {
+  -webkit-transform: translateX(5px) translateY(-0.2rem);
+          transform: translateX(5px) translateY(-0.2rem);
+}
+
+#home .home__container--right__buttons a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding-left: 5px;
+  text-decoration: none;
+  margin-top: 30px;
+  margin-bottom: 120px;
+  color: black;
+  font-size: 25px;
+  font-family: "Space Mono", monospace;
+  border: 2px solid black;
+  background-color: white;
+  -webkit-box-shadow: 1px 2px black;
+          box-shadow: 1px 2px black;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+#home .home__container--right__buttons a::after {
+  content: "";
+  display: inline-block;
+  background: url(/src/assets/img/lamp.png) no-repeat;
+  background-size: cover;
+  width: 45px;
+  margin-top: 5px;
+  height: 25px;
+}
+
+@media screen and (min-width: 600px) and (max-width: 959px) {
+  .navbar__container {
+    position: fixed;
+  }
+  .navbar__container__logo {
+    margin-left: -20px;
+  }
+  .navbar__container__menu-toggler {
+    left: 850px;
+  }
+  .navbar__container .menu-toggler--active span:nth-child(1) {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    top: 4px;
+  }
+  .navbar__container .menu-toggler--active span:nth-child(2) {
+    opacity: 0;
+  }
+  .navbar__container .menu-toggler--active span:nth-child(3) {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+    bottom: 14px;
+  }
+  .navbar__container__menu {
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    background-color: white;
+    top: 0px;
+    right: -100%;
+    max-width: 450px;
+    padding: 80px 50px;
+    -webkit-transition: 0.5s ease-in-out;
+    transition: 0.5s ease-in-out;
+  }
+  .navbar__container__menu a {
+    display: block;
+    font-size: 40px;
+    text-transform: uppercase;
+    border-bottom: 1.5px solid #c8cbcb;
+    margin: 35px 0;
+  }
+  .navbar__container .menu--active {
+    right: 0px;
+  }
+  .navbar #home .home__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    max-width: 959px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
