--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -59,12 +59,13 @@ body{
                 height: 3px;
                 margin: 6px 0;
                 transition: 0.5s;
-                display: none;
+                //display: none;
             }
 
         }
 
         &__menu{
+            margin-left: 600px;
             a:hover{
                 color: blue;
                 }
@@ -86,199 +87,256 @@ body{
 
 
 #home{
-    .home__container--left{
-        -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
-        position: absolute;
-        left: 400px;
-        top: 300px;
-        //border: solid 10px #262262;
-        width: 300px;
+    .home__container{
 
-        &__content{
-            width: 100%;
-            font-family: $font-stack;
-            color:#36a9e1;
-            width: 550px;
-            padding: 10px;
-            margin:0px;
-           
-            
-            h1{
-                margin-bottom: 600px;
-                .hello:hover{
-                    transform: rotate(3.5deg);
-                    transition:1.5s;
-                }
-                .hello{
-                    background-color: white;
-                    font-size: 80px;
-                    border: 3.5px solid black;
-                    box-shadow: 3px 4px black;
-                    right: 250px;
-                    position: absolute;
-                    line-height: 1.3;
-                    padding-left: 30px;
-                    padding-right: 30px;
-                    top: 200px;
-                    transform: rotate(-3.5deg) translateX(30%);
-                    width: auto;
-                    white-space: nowrap;
-                }
-                .name:hover{
-                    transform: rotate(-1.5deg);
-                    transition:1.5s;
-                }
-                .name{
-                    background-color:white;//#D8BFD8
-                    font-size: 80px;
-                    border: 3.5px solid black;
-                    box-shadow: 3px 4px black;
-                    position: absolute;
-                    right: 150px;
-                    line-height: 1.3;
-                    padding-left: 30px;
-                    padding-right: 30px;
-                    top: 390px;
-                    transform: rotate(1.5deg) translateX(30%);
-                    width: auto;
-                    white-space: nowrap;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-between;
+        //border: 10px solid red;
+
     
-                    .text--red{
-                        color: $secondary-color;
+        &--left{
+            position: relative;
+            height: 500px;
+            width: 750px;
+            //border: 10px solid black;
+
+            &__content{
+                width: 100%;
+                font-family: $font-stack;
+                color:#36a9e1;
+                width: 550px;
+            
+                
+                h1{
+                    .hello:hover{
+                        transform: rotate(3.5deg);
+                        transition:1.5s;
+                    }
+                    .hello{
+                        position: absolute;
+                        background-color: white;
+                        font-size: 60px;
+                        border: 3.5px solid black;
+                        box-shadow: 3px 4px black;
+                        right: 350px;
+                        line-height: 1.3;
+                        padding-left: 30px;
+                        padding-right: 30px;
+                        top: 150px;
+                        transform: rotate(-3.5deg) translateX(30%);
+                        width: auto;
+                        white-space: nowrap;
+                    }
+                    .name:hover{
+                        transform: rotate(-3.5deg) translateX(50%);
+                        transition:1.5s;
+                    }
+                    .name{
+                        position: absolute;
+                        background-color:white;//#D8BFD8
+                        font-size: 60px;
+                        border: 3.5px solid black;
+                        box-shadow: 3px 4px black;
+                        right: 240px;
+                        line-height: 1.3;
+                        padding-left: 30px;
+                        padding-right: 30px;
+                        top: 300px;
+                        transform: rotate(1.5deg) translateX(30%);
+                        width: auto;
+                        white-space: nowrap;
+        
+                        .text--red{
+                            color: $secondary-color;
+                        }
+                    }
+                    .job:hover{
+                        transform: rotate(2.5deg) translateX(30%);
+                        transition:1.5s;
+                    }
+                    .job{
+                        position: absolute;
+                        background-color:white;
+                        font-size: 60px;
+                        border: 3.5px solid black;
+                        box-shadow: 3px 4px black;
+                        right: 230px;
+                        line-height: 1.3;
+                        padding-left: 30px;
+                        padding-right: 30px;
+                        top: 480px;
+                        transform: rotate(-2.5deg) translateX(30%);
+                        width: auto;
+                        white-space: nowrap;
+                    }
+                
+        
+            }
+            
+        }
+    }
+
+        &--right{
+            left: -250px;
+            margin-top: 90px;
+            width:550px;
+            //border: 10px solid blue;
+
+            &__frame{
+                position: absolute;
+                width: 490px;
+                margin-top: 70px;
+                background: rgba(174, 168, 168, 0.729);
+                border: 1px solid black;
+                .icon::after{
+                    position: absolute;
+                    top: 1px;
+                    left: -1px;
+                    content: " ";
+                    width: 20px;
+                    height: 19px;
+                    background: url(/src/assets/img/message.png) no-repeat 50%;
+                    background-size: 25px;
+                }
+                .spacer{
+                    position: absolute;
+                    background: none;
+                    width: 365px;
+                    border: none;
+                    left: 20px;
+                    top: 3px;
+                    padding-right: -20px;
+                    outline: none;
+                    //z-index: 5;
+                    i{
+                        display: flex;
+                        position: relative;
+                        background-color: black;
+                        height: 1px;
+                        //right: 1px;
+                        margin: 1px;
+                        transition: 0.5s; 
                     }
                 }
-                .job:hover{
-                    transform: rotate(2.5deg) translateX(30%);
-                    transition:1.5s;
+                    h2{
+                        margin-left: 390px;
+                        font-size: 12px;
+                        font-weight: 500;
+                        font-family: monospace;
+                        color: black;
+                    }
+                    
                 }
-                .job{
-                    background-color:white;
-                    font-size: 80px;
-                    border: 3.5px solid black;
-                    box-shadow: 3px 4px black;
-                    position: absolute;
-                    right: 150px;
-                    line-height: 1.3;
-                    padding-left: 30px;
-                    padding-right: 30px;
-                    top: 590px;
-                    transform: rotate(-2.5deg) translateX(30%);
-                    width: auto;
-                    white-space: nowrap;
-                }
-    
-            }
         
-    }
-}
 
-    .home__container--right{
-        position: relative;
-        left: 850px;
-        top: 170px;
-        //border: solid 10px #262262;
-        width: 300px;
-
-        &__frame{
-            display: flex;
-            align-items: center;
-            box-align: center;
-            padding: 2px;
-            width: 480px;
-            left: -10px;
-            top: 0px;
-            position: absolute;
-            background: rgba(174, 168, 168, 0.729);
-            border: 1px solid black;
-            .icon::after{
-                position: absolute;
-                top: 2px;
-                left: 5px;
-                content: " ";
-                width: 20px;
-                height: 19px;
-                background: url(/src/assets/img/message.png) no-repeat 50%;
-                background-size: 25px;
-            }
-            .spacer{
-                background: none;
-                width: 355px;
-                border: none;
-                left: 25px;
-                padding-right: -20px;
-                position: absolute;
-                outline: none;
-                z-index: 999;
-                i{
-                    display: flex;
-                    position: relative;
-                    background-color: black;
-                    height: 1px;
-                    //right: 1px;
-                    margin: 1px;
-                    transition: 0.5s; 
-                }
-            }
-            h2{
-                //margin: 0;
-                margin-left: 380px;
-                font-size: 12px;
-                font-weight: 500;
-                font-family: monospace;
-                color: black;
-                
-            }
-    
-
-        }
-        &__profile{
-            position: absolute;
-            display: flex;
-            align-items: center;
-            box-align: center;
-            padding: 150px;
-            width: 480px;
-            left: -10px;
-            top: 22px;
-            height: 450px;
-            border: 3px solid black;
-            background-color: $primary-color;
-            //background: url(/src/assets/img/profile.jpg) no-repeat;
-            // border-radius: 3px;
-            // box-shadow: 3px 4px ;
-            // ransform: rotate(1.5deg) translateX(30%);
-            // width: auto;
-            // white-space: nowrap;
-            img{
+            &__profile{
+                position: relative;
+                // display: flex;
+                // align-items: center;
+                // box-align: center;
+                // padding: 150px;
+                width: 490px;
+                height:450px;
                 left: 0px;
-                top: -130px;
+                top: 90px;
+                border: 2px solid black;
+                background-color: $primary-color;
+                //background: url(/src/assets/img/profile.jpg) no-repeat;
+                // border-radius: 3px;
+                // box-shadow: 3px 4px ;
+                // ransform: rotate(1.5deg) translateX(30%);
+                // width: auto;
+                // white-space: nowrap;
+
+                
+                img:hover{
+                    transform: translateY(10px);
+                    transition:1.5s;
+
+                }
+                img{
+                    position: absolute;
+                    left: 0px;
+                    top: -132px;
+                    border-radius: 65px;
+                    width:auto;
+                }
+            }
+
+            &__social-logo{
+                display: flex;
+                align-items: center;
+                justify-content: flex-end;
+                flex-wrap: wrap;
                 position: absolute;
+                margin-top: 40px;
+                margin-left: 320px;
+
+                a:hover{
+                    color:black;
+                    transition: 1s;
+                }
+
+                a{
+                    text-decoration: none;
+                    color:white;
+                    font-size: 40px;
+                    transition: 0.2s;
+                    margin-left: 15px;
+                }
+
             }
-        }
-        &__social-logo{
-            position: absolute;
-            display: flex;
-            align-items: center;
-            justify-content: space-around;
-            padding: 10px;
-            width: 550px;
-            top: 550px;
+
+            &__buttons{
+                position: absolute;
+                margin-top: -300px;
+                margin-left: 260px;
+                width: 210px;
+                
+                a:hover{
+                    transform: translateX(5px) translateY(-0.2rem);
+                    // color: white;
+                    // background-color: #e0ffff;
+                }
+                a
+                {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-wrap: wrap;
+                    padding-left: 5px;
+                    text-decoration: none;
+                    margin-top: 30px;
+                    margin-bottom: 120px;
+                    color:black;
+                    font-size: 25px;
+                    font-family: "Space Mono", monospace;
+                    border: 2px solid black;
+                    background-color: white;
+                    box-shadow: 1px 2px black;
+                    border-radius: 3px;
+                    cursor: pointer;
+                    
+
+
+                }
+                a::after{
+                    content: "";
+                    display: inline-block;
+                    background: url(/src/assets/img/lamp.png) no-repeat;
+                    background-size: cover;
+                    width: 45px;
+                    margin-top: 5px;
+                    height: 25px;
+                    
+                }
+            }
             
-            a:hover{
-                color: blue;
-            }
-            a{
-                text-decoration: none;
-                color: $icon-color;
-                font-size: 40px;
-                margin-top: -20px;
-                transition: 0.2s;
-            }
 
         }
-        
-
     }
 }
+
+@import '_responsive.scss'
